--- a/Dockerfile-wl
+++ b/Dockerfile-wl
@@ -7,4 +7,4 @@ ARG FEATURE_REPO_URL=""
 COPY --chown=1001:0  src/main/liberty/config/server.xml /config/
 COPY --chown=1001:0  target/greeting.war /config/apps/
 
-RUN configure.sh
+RUN date && configure.sh && date
