--- a/deploy/kustomization.yaml
+++ b/deploy/kustomization.yaml
@@ -9,9 +9,6 @@ nameSuffix: -cicd
 patches:
   - patch: |-
       - op: replace
-        path: /spec/applicationImage
-        value: quay.io/client-engineering-cee/whe/greeting-wl:v1
-      - op: replace
         path: /spec/env/0/valueFrom/configMapKeyRef/name
         value: greeting-cicd
     target:
@@ -22,3 +19,5 @@ patches:
         value: Hello from WebSphere Liberty managed by WebSphere Liberty Operator;Hello from CI/CD pipeline
     target:
       kind: ConfigMap
+patchesStrategicMerge:
+- applicationImage.Patch.yaml
